Increase default mem limits

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -1,117 +1,199 @@
-# Milestone v0.5: KubeVirt Live Migration
+# Roadmap: RDS CSI Driver
 
-**Status:** In Progress
-**Phases:** 8-10
-**Total Plans:** 3 (Phase 8) + 4 (Phase 9) + 5 (Phase 10, including 1 gap closure)
+## Milestones
 
-## Overview
-
-This roadmap enables KubeVirt VM live migration with RDS CSI volumes. Three phases build from capability to safety to observability: adding ReadWriteMany block volume support with a 2-node attachment limit, implementing migration-specific safety controls that differentiate from RWO conflict detection, and exposing migration metrics and events for operator visibility. The driver will allow temporary dual-node attachment during migration while rejecting unsafe RWX filesystem volumes.
+- ✅ **v1 Production Stability** - Phases 1-4 (shipped 2026-01-31)
+- ✅ **v0.3.0 Volume Fencing** - Phases 5-7 (shipped 2026-02-03)
+- ✅ **v0.5.0 KubeVirt Live Migration** - Phases 8-10 (shipped 2026-02-03)
+- 🚧 **v0.6.0 Block Volume Support** - Phases 11-13 (in progress)
 
 ## Phases
 
+<details>
+<summary>✅ v1 Production Stability (Phases 1-4) - SHIPPED 2026-01-31</summary>
+
+### Phase 1: Device Path Resolution
+**Goal**: Volumes remain accessible after NVMe controller renumbering
+**Plans**: 4 plans
+
+Plans:
+- [x] 01-01: NQN-based device path resolution
+- [x] 01-02: Device path validation and caching
+- [x] 01-03: Stale mount detection and cleanup
+- [x] 01-04: Integration with NodeStageVolume/NodeUnstageVolume
+
+### Phase 2: Connection Resilience
+**Goal**: NVMe connections automatically recover from network hiccups
+**Plans**: 4 plans
+
+Plans:
+- [x] 02-01: Kernel reconnection parameters (ctrl_loss_tmo, reconnect_delay)
+- [x] 02-02: Orphaned subsystem detection and cleanup
+- [x] 02-03: Remount on device path change
+- [x] 02-04: Connection state validation in NodeGetVolumeStats
+
+### Phase 3: Observability
+**Goal**: Operators can monitor and debug volume issues
+**Plans**: 5 plans
+
+Plans:
+- [x] 03-01: Prometheus metrics endpoint
+- [x] 03-02: CSI operation metrics (CreateVolume, NodeStageVolume, etc.)
+- [x] 03-03: Device path resolution metrics
+- [x] 03-04: Kubernetes event posting for mount failures
+- [x] 03-05: VolumeCondition health reporting
+
+### Phase 4: Testing and Validation
+**Goal**: All reconnection scenarios validated on metal cluster
+**Plans**: 4 plans
+
+Plans:
+- [x] 04-01: Unit tests for DeviceResolver and DeviceValidator
+- [x] 04-02: E2E tests for controller renumbering scenarios
+- [x] 04-03: Manual testing: RDS restart, network partition
+- [x] 04-04: Deployment validation on metal cluster
+
+</details>
+
+<details>
+<summary>✅ v0.3.0 Volume Fencing (Phases 5-7) - SHIPPED 2026-02-03</summary>
+
+### Phase 5: Attachment Manager
+**Goal**: Track and persist volume-to-node attachments
+**Plans**: 4 plans
+
+Plans:
+- [x] 05-01: AttachmentManager with in-memory state
+- [x] 05-02: PV annotation persistence for attachment metadata
+- [x] 05-03: AttachmentState struct with timestamps
+- [x] 05-04: Grace period mechanism for KubeVirt migration handoff
+
+### Phase 6: Controller Publish/Unpublish
+**Goal**: Prevent multi-node attachment conflicts
+**Plans**: 4 plans
+
+Plans:
+- [x] 06-01: ControllerPublishVolume with RWO enforcement
+- [x] 06-02: ControllerUnpublishVolume with cleanup and idempotency
+- [x] 06-03: Attachment conflict detection (return FAILED_PRECONDITION)
+- [x] 06-04: Prometheus metrics for attachment operations
+
+### Phase 7: Reconciliation and Testing
+**Goal**: Stale attachments cleaned up automatically
+**Plans**: 4 plans
+
+Plans:
+- [x] 07-01: Background reconciler for stale attachment cleanup
+- [x] 07-02: Deleted node detection via Kubernetes API
+- [x] 07-03: E2E tests for attachment conflict scenarios
+- [x] 07-04: Deployment validation with real KubeVirt workloads
+
+</details>
+
+<details>
+<summary>✅ v0.5.0 KubeVirt Live Migration (Phases 8-10) - SHIPPED 2026-02-03</summary>
+
 ### Phase 8: Core RWX Capability
 **Goal**: KubeVirt VMs can live migrate using RWX block PVCs
-**Depends on**: Phase 7 (Robustness and Observability from v0.3)
 **Requirements**: RWX-01, RWX-02, RWX-03
-**Plans**: 3 plans in 3 waves
-
-**Success Criteria** (what must be TRUE):
-1. User can create PVC with `accessModes: [ReadWriteMany]` and `volumeMode: Block` that is accepted by the driver
-2. User receives a clear error when attempting to create PVC with `accessModes: [ReadWriteMany]` and `volumeMode: Filesystem`
-3. Volume can be attached to exactly 2 nodes simultaneously (source and destination during migration)
-4. ControllerGetCapabilities declares MULTI_NODE_MULTI_WRITER for block volumes only
+**Plans**: 3 plans
 
 Plans:
-- [x] 08-01-PLAN.md — Add MULTI_NODE_MULTI_WRITER capability and RWX block-only validation
-- [x] 08-02-PLAN.md — Modify AttachmentManager to allow 2-node attachment for RWX block volumes
-- [x] 08-03-PLAN.md — Comprehensive unit tests
-
-**Details:**
-- Add `MULTI_NODE_MULTI_WRITER` to driver vcaps array in pkg/driver/driver.go
-- Validate that RWX requests have `cap.GetBlock() != nil`, reject mount volumes
-- Modify ControllerPublishVolume to allow 2-node attachment when access mode is RWX and volume mode is block
-- Enforce strict 2-node limit (not unlimited multi-attach)
+- [x] 08-01: Add MULTI_NODE_MULTI_WRITER capability and RWX block-only validation
+- [x] 08-02: Modify AttachmentManager to allow 2-node attachment for RWX block volumes
+- [x] 08-03: Comprehensive unit tests
 
 ### Phase 9: Migration Safety
-**Goal**: Migration dual-attachment is distinguishable from RWO conflicts with appropriate timeout and cleanup behavior
-**Depends on**: Phase 8
+**Goal**: Migration dual-attachment is distinguishable from RWO conflicts
 **Requirements**: SAFETY-01, SAFETY-02, SAFETY-03, SAFETY-04
-**Plans**: 4 plans in 3 waves
-
-**Success Criteria** (what must be TRUE):
-1. Migration timeout (5 min default, configurable via StorageClass) allows dual-attachment window without triggering conflict
-2. Non-migration dual-attach attempts fail immediately with FAILED_PRECONDITION (no grace period applied)
-3. AttachmentState tracks secondary attachment with migration timestamp for reconciler cleanup
-4. NodeUnstageVolume verifies no open file descriptors before issuing NVMe disconnect
+**Plans**: 4 plans
 
 Plans:
-- [x] 09-01-PLAN.md — Extend AttachmentState for migration tracking and configurable timeout
-- [x] 09-02-PLAN.md — Separate migration timeout from RWO conflict detection logic
-- [x] 09-03-PLAN.md — Device-in-use verification in NodeUnstageVolume
-- [x] 09-04-PLAN.md — Comprehensive unit tests
+- [x] 09-01: Extend AttachmentState for migration tracking and configurable timeout
+- [x] 09-02: Separate migration timeout from RWO conflict detection logic
+- [x] 09-03: Device-in-use verification in NodeUnstageVolume
+- [x] 09-04: Comprehensive unit tests
 
-**Details:**
-- Extend AttachmentState struct with MigrationStartedAt timestamp and MigrationTimeout duration
-- StorageClass parameter `migrationTimeoutSeconds` (default 300, range 30-3600)
-- ParseMigrationTimeout validates and clamps timeout to safe range
-- Migration detection: RWX block volume + 2-node attachment pattern
-- Timed-out migrations reject new secondary attachments with clear error
-- Non-migration RWO conflicts fail immediately (existing behavior preserved)
-- CheckDeviceInUse via lsof (5s timeout) before NVMe disconnect
-- Migration state cleared automatically when source node detaches
-
-### Phase 10: Observability
+### Phase 10: Observability and Validation
 **Goal**: Operators can monitor migrations and users understand safe RWX usage
-**Depends on**: Phase 9
 **Requirements**: OBS-01, OBS-02, OBS-03
-**Plans**: 5 plans in 2 waves (including 1 gap closure)
-
-**Success Criteria** (what must be TRUE):
-1. Prometheus metrics expose `migrations_total`, `migration_duration_seconds`, `active_migrations` gauge
-2. Kubernetes events posted to PVC: MigrationStarted, MigrationCompleted, MigrationFailed
-3. User documentation clearly explains RWX is safe only for KubeVirt live migration (not general RWX workloads)
+**Plans**: 5 plans
 
 Plans:
-- [x] 10-01-PLAN.md — Prometheus migration metrics (3 metrics, recording methods)
-- [x] 10-02-PLAN.md — Kubernetes migration events on PVC (3 event types)
-- [x] 10-03-PLAN.md — Wire metrics/events into attachment manager and controller
-- [x] 10-04-PLAN.md — User documentation for RWX safety (docs/kubevirt-migration.md)
-- [x] 10-05-PLAN.md — Gap closure: Wire PostMigrationCompleted in ControllerUnpublishVolume
+- [x] 10-01: Prometheus migration metrics (migrations_total, duration, active_migrations)
+- [x] 10-02: Kubernetes migration events on PVC
+- [x] 10-03: Wire metrics/events into attachment manager and controller
+- [x] 10-04: User documentation for RWX safety
+- [x] 10-05: Gap closure: Wire PostMigrationCompleted in ControllerUnpublishVolume
 
-**Details:**
-- Metrics with `rds_csi_migration_` prefix
-- `migrations_total` counter with labels: result (success/failed/timeout)
-- `migration_duration_seconds` histogram
-- `active_migrations` gauge (current in-flight migrations)
-- Events: MigrationStarted (when 2nd node attaches), MigrationCompleted (when 1st node detaches), MigrationFailed (on timeout or error)
-- Documentation in docs/kubevirt-migration.md with explicit warnings about data corruption risk outside KubeVirt
+</details>
 
----
+### 🚧 v0.6.0 Block Volume Support (In Progress)
 
-## Milestone Summary
+**Milestone Goal:** Implement CSI block volume support to enable KubeVirt VMs with RDS storage
 
-**Decimal Phases:** None (no urgent insertions yet)
+#### Phase 11: Block Volume Node Operations
+**Goal**: Node plugin handles block volumes without formatting filesystem
+**Depends on**: Phase 10 (RWX capability exists)
+**Requirements**: BLOCK-01, BLOCK-02, BLOCK-03, BLOCK-04, BLOCK-05
+**Success Criteria** (what must be TRUE):
+  1. NodeStageVolume connects to NVMe target for block volumes without creating filesystem
+  2. NodePublishVolume creates block device file at target path (e.g., /var/lib/kubelet/pods/XXX/volumeDevices/pvc-YYY)
+  3. Block device file is accessible by VM workload with correct major/minor numbers
+  4. NodeUnpublishVolume successfully removes block device file
+  5. NodeUnstageVolume disconnects NVMe target for block volumes correctly
+**Plans**: 3 plans
 
-**Key Decisions:**
-- ROADMAP-4: RWX block-only, reject RWX filesystem (prevents data corruption)
-- ROADMAP-5: 2-node limit during migration (sufficient for KubeVirt, prevents misuse)
-- ROADMAP-6: Trust QEMU for I/O coordination (driver permits dual-attach, doesn't coordinate)
+Plans:
+- [x] 11-01-PLAN.md — MakeFile helper and NodeStageVolume block support
+- [x] 11-02-PLAN.md — NodePublishVolume and NodeUnpublishVolume block support
+- [x] 11-03-PLAN.md — NodeUnstageVolume block support and unit tests
 
-**Issues Targeted:**
-- VMs show "Live Migration: false" due to missing RWX support
-- KubeVirt live migration fails with RDS CSI volumes
-- Need dual-node attachment during migration handoff
+#### Phase 12: Compatibility and Quality
+**Goal**: Existing filesystem volumes work without regression, clear error messages
+**Depends on**: Phase 11
+**Requirements**: BLOCK-06, BLOCK-07
+**Success Criteria** (what must be TRUE):
+  1. Existing filesystem-mode PVCs mount successfully (no regression from block volume changes)
+  2. Driver returns clear error if user requests unsupported volume mode combination
+  3. Unit tests cover both block and filesystem volume paths
+**Plans**: TBD
 
-**Issues Deferred:**
-- Cluster filesystem support (GFS2/OCFS2) for true RWX filesystem volumes
-- RDS-level namespace reservations/fencing for split-brain protection
-- KubeVirt API client integration for richer migration awareness
+Plans:
+- [ ] 12-01: TBD during planning
 
-**Technical Debt Incurred:**
-- TBD (will be tracked during execution)
+#### Phase 13: Hardware Validation
+**Goal**: KubeVirt VMs boot and live migrate successfully on metal cluster
+**Depends on**: Phase 12
+**Requirements**: VAL-01, VAL-02, VAL-03
+**Success Criteria** (what must be TRUE):
+  1. KubeVirt VM boots successfully with RDS block volume on metal cluster
+  2. VM can read and write data to block volume (I/O validation)
+  3. KubeVirt live migration completes end-to-end (VM moves between nodes)
+  4. Migration metrics (migrations_total, migration_duration_seconds) are emitted correctly
+  5. No data corruption detected after migration (checksum validation)
+**Plans**: TBD
 
----
+Plans:
+- [ ] 13-01: TBD during planning
 
-*For previous milestones, see .planning/milestones/v0.3-ROADMAP.md*
-*Milestone started: 2026-02-03*
+## Progress
+
+**Execution Order:**
+Phases execute in numeric order: 11 → 12 → 13
+
+| Phase | Milestone | Plans Complete | Status | Completed |
+|-------|-----------|----------------|--------|-----------|
+| 1. Device Path Resolution | v1 | 4/4 | Complete | 2026-01-31 |
+| 2. Connection Resilience | v1 | 4/4 | Complete | 2026-01-31 |
+| 3. Observability | v1 | 5/5 | Complete | 2026-01-31 |
+| 4. Testing and Validation | v1 | 4/4 | Complete | 2026-01-31 |
+| 5. Attachment Manager | v0.3.0 | 4/4 | Complete | 2026-02-03 |
+| 6. Controller Publish/Unpublish | v0.3.0 | 4/4 | Complete | 2026-02-03 |
+| 7. Reconciliation and Testing | v0.3.0 | 4/4 | Complete | 2026-02-03 |
+| 8. RWX Capability | v0.5.0 | 3/3 | Complete | 2026-02-03 |
+| 9. Migration Safety and Tracking | v0.5.0 | 4/4 | Complete | 2026-02-03 |
+| 10. Observability and Validation | v0.5.0 | 5/5 | Complete | 2026-02-03 |
+| 11. Block Volume Node Operations | v0.6.0 | 3/3 | Complete | 2026-02-03 |
+| 12. Compatibility and Quality | v0.6.0 | 0/TBD | Not started | - |
+| 13. Hardware Validation | v0.6.0 | 0/TBD | Not started | - |
