docs(14): update Phase 14 with NQN filtering requirements
Add requirements for configurable NQN prefix to prevent system volume
interference. This addresses the critical issue where CSI driver could
disconnect system volumes (e.g., /var mounted via nixos-* NQNs) on
diskless nodes.

Requirements:
- PROTECT-01: NQN filtering prevents system volume disconnect
- PROTECT-02: Configurable NQN prefix (default: pvc-)
- Helm value: nqnPrefix
- Env var: CSI_MANAGED_NQN_PREFIX

Related: commit 6d7cece (NQN filtering hotfix)

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -157,10 +157,10 @@ Plans:
   1. Existing filesystem-mode PVCs mount successfully (no regression from block volume changes)
   2. Driver returns clear error if user requests unsupported volume mode combination
   3. Unit tests cover both block and filesystem volume paths
-**Plans**: TBD
+**Plans**: 1 plan
 
 Plans:
-- [ ] 12-01: TBD during planning
+- [x] 12-01-PLAN.md — Regression tests and error message validation
 
 #### Phase 13: Hardware Validation
 **Goal**: KubeVirt VMs boot and live migrate successfully on metal cluster
@@ -172,15 +172,32 @@ Plans:
   3. KubeVirt live migration completes end-to-end (VM moves between nodes)
   4. Migration metrics (migrations_total, migration_duration_seconds) are emitted correctly
   5. No data corruption detected after migration (checksum validation)
-**Plans**: TBD
+**Plans**: 1 plan
 
 Plans:
-- [ ] 13-01: TBD during planning
+- [ ] 13-01-PLAN.md — Hardware validation on metal cluster
+
+#### Phase 14: Error Resilience and Mount Storm Prevention
+**Goal**: Prevent corrupted filesystems from causing cluster-wide mount storms and system volume interference
+**Depends on**: Phase 13
+**Requirements**: PROTECT-01, PROTECT-02, RESILIENCE-01, RESILIENCE-02, RESILIENCE-03, RESILIENCE-04
+**Success Criteria** (what must be TRUE):
+  1. **NQN filtering prevents system volume disconnect** - Driver only manages volumes with configurable NQN prefix (default: `pvc-`), refuses to disconnect system volumes (e.g., `nixos-*`)
+  2. **Configurable NQN prefix** - Managed NQN prefix is configurable via Helm value `nqnPrefix` and env var `CSI_MANAGED_NQN_PREFIX`, defaults to `nqn.2000-02.com.mikrotik:pvc-`
+  3. Procmounts parsing has timeout protection (max 10s)
+  4. Duplicate mount detection prevents mount storms (max 100 entries per device)
+  5. Graceful shutdown completes within 30s even during stuck operations
+  6. Filesystem health check runs before NodeStageVolume mount
+  7. Circuit breaker prevents retry storms on repeatedly failing volumes
+**Plans**: 0 plans
+
+Plans:
+- [ ] TBD (run /gsd:plan-phase 14 to break down)
 
 ## Progress
 
 **Execution Order:**
-Phases execute in numeric order: 11 → 12 → 13
+Phases execute in numeric order: 11 → 12 → 13 → 14
 
 | Phase | Milestone | Plans Complete | Status | Completed |
 |-------|-----------|----------------|--------|-----------|
@@ -195,5 +212,5 @@ Phases execute in numeric order: 11 → 12 → 13
 | 9. Migration Safety and Tracking | v0.5.0 | 4/4 | Complete | 2026-02-03 |
 | 10. Observability and Validation | v0.5.0 | 5/5 | Complete | 2026-02-03 |
 | 11. Block Volume Node Operations | v0.6.0 | 3/3 | Complete | 2026-02-03 |
-| 12. Compatibility and Quality | v0.6.0 | 0/TBD | Not started | - |
-| 13. Hardware Validation | v0.6.0 | 0/TBD | Not started | - |
+| 12. Compatibility and Quality | v0.6.0 | 1/1 | Complete | 2026-02-03 |
+| 13. Hardware Validation | v0.6.0 | 0/1 | In progress | - |
