style: apply goimports formatting across codebase
Auto-formatted import grouping and struct field alignment.

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -192,10 +192,10 @@ Plans:
 **Plans**: 4 plans
 
 Plans:
-- [ ] 14-01-PLAN.md — NQN prefix validation and configurable filtering
-- [ ] 14-02-PLAN.md — Safe procmounts parsing with timeout and duplicate detection
-- [ ] 14-03-PLAN.md — Circuit breaker and filesystem health checks
-- [ ] 14-04-PLAN.md — Graceful shutdown and deployment configuration
+- [x] 14-01-PLAN.md — NQN prefix validation and configurable filtering
+- [x] 14-02-PLAN.md — Safe procmounts parsing with timeout and duplicate detection
+- [x] 14-03-PLAN.md — Circuit breaker and filesystem health checks
+- [x] 14-04-PLAN.md — Graceful shutdown and deployment configuration
 
 ## Progress
 
@@ -217,4 +217,4 @@ Phases execute in numeric order: 11 → 12 → 13 → 14
 | 11. Block Volume Node Operations | v0.6.0 | 3/3 | Complete | 2026-02-03 |
 | 12. Compatibility and Quality | v0.6.0 | 1/1 | Complete | 2026-02-03 |
 | 13. Hardware Validation | v0.6.0 | 0/1 | In progress | - |
-| 14. Error Resilience | v0.6.0 | 0/4 | Not started | - |
+| 14. Error Resilience | v0.6.0 | 4/4 | Complete | 2026-02-03 |
